--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -63,7 +63,7 @@
                   <a href="/about">About</a>
                 </li>
                 <li><a href="/shop">Shop</a></li>
-                <li><a href="/">My Orders</a></li>
+                <li><a href="/orderDetails">My Orders</a></li>
                 <li><a href="/contact">Contact Us</a></li>
                <% if(customer){%>
                 <li><a href="/logout">Logout</a></li>
