--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -1,4 +1,94 @@
-<%- include('../partials/user_header')%>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- CSS only -->
+  <link rel="stylesheet" href="/https://fonts.googleapis.com/css?family=Mukta:300,400,700">
+  <link rel="stylesheet" href="/fonts/icomoon/style.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
+
+<body>
+
+
+    <div class="site-wrap">
+      <header class="site-navbar" role="banner">
+        <div class="site-navbar-top">
+          <div class="container">
+            <div class="row align-items-center">
+
+              <div class="col-6 col-md-4 order-2 order-md-1 site-search-icon text-left">
+                <form action="" class="site-block-top-search">
+                  <span class="icon icon-search2"></span>
+                  <input type="text" class="form-control border-0" placeholder="Search">
+                </form>
+              </div>
+
+              <div class="col-12 mb-3 mb-md-0 col-md-4 order-1 order-md-2 text-center">
+                <div class="site-logo">
+                  <a href="/index" class="js-logo-clone" style="text-decoration: none;">Wonder Shoes</a>
+                </div>
+              </div>
+
+              <div class="col-6 col-md-4 order-3 order-md-3 text-right">
+                <div class="site-top-icons">
+                  <ul>
+
+                    <li><a href="/viewProfile" style="text-decoration: none;"><span class="icon icon-person"></li>
+                    <li><a href="#" style="text-decoration: none;"><span class="icon icon-heart-o"></a></li>
+                    <li>
+
+
+                      <a href="/viewCart" class="site-cart" style="text-decoration: none;">
+
+                        <span class="icon icon-shopping_cart"></span>
+                        <% if(locals.countInCart) {%>
+                          <span class="count">
+                            <%=countInCart%>
+                          </span>
+                          <% } %>
+                      </a>
+
+                    </li>
+                    <li class="d-inline-block d-md-none ml-md-0"><a href="#"
+                        class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
+
+                  </ul>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <nav class="site-navigation text-right text-md-center" role="navigation">
+          <div class="container">
+            <ul class="site-menu js-clone-nav d-none d-md-block">
+              <li class="has-children active">
+                <a href="/index" style="text-decoration: none;">Home</a>
+              </li>
+              <li class="has-children">
+                <a href="/about" style="text-decoration: none;">About</a>
+              </li>
+              <li><a href="/shop" style="text-decoration: none;">Shop</a></li>
+              <li><a href="#" style="text-decoration: none;">My Orders</a></li>
+              <li><a href="/contact" style="text-decoration: none;">Contact Us</a></li>
+              <% if(customer){%>
+                <li><a href="/logout" style="text-decoration: none;">Logout</a></li>
+                <%}else{%>
+                  <li><a href="/login" style="text-decoration: none;">Login</a></li>
+                  <%}%>
+            </ul>
+          </div>
+        </nav>
+      </header>
+
 
     <!-- breadcrumb-section -->
     <div class="breadcrumb-section breadcrumb-bg">
@@ -23,8 +113,7 @@
         <table class="table table-success table-striped mb-100" id="table">
             <thead>
                 <tr>
-                    <th scope="col">Order date</th>
-                    
+                    <th scope="col">Order date</th>    
                     <th scope="col">Payment method</th>
                     <th scope="col">Payment status</th>
                     <th scope="col">Order status</th>
@@ -55,8 +144,8 @@
                       
                         <% } %> 
                    <!-- Modal -->
-                   <div class="modal fade" id="exampleModal-<%=order._id%>" tabindex="-1"
-                     aria-labelledby="exampleModalLabel" aria-hidden="true">
+                   <div class="modal fade  modal-centered" id="exampleModal-<%=order._id%>" tabindex="-1" 
+                     aria-labelledby="exampleModalLabel" >
                      <div class="modal-dialog">
                        <div class="modal-content">
                          <div class="modal-header">
@@ -96,4 +185,4 @@
     
     <!-- end middle section -->
     <!-- footer -->
-    <%- include('../partials/user_footer')%>
+    <%- include('../partials/footer')%>
