--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -119,8 +119,8 @@ background: linear-gradient(to top left, rgba(205, 156, 242, 1), rgba(246, 243, 
             </div>
             <div class="card-body p-4">
               <div class="d-flex justify-content-between align-items-center mb-4">
-                <p class="lead fw-normal mb-0" style="color: #a8729a;">Receipt</p>
-                <p class="small text-muted mb-0">Receipt Voucher : 1KAU9-84UIL</p>
+                <p class="lead fw-normal mb-0" style="color: #a8729a;">All orders</p>
+                <p class="small text-muted mb-0">wondershoes.tk</p>
               </div>
               <% productData.forEach((product)=>{ %>
               <div class="card shadow-0 border mb-4">
