--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -117,20 +117,17 @@
         <div class="row">   
           <div class="col-md-12">          
             <div class="nonloop-block-3 owl-carousel">
-              <% productData.forEach((product)=>{ %> 
+              <% product.forEach((products)=>{ %> 
               <div class="item">
                 <div class="block-4 text-center" >
-                  <figure class="block-4-image ">
-                    <a href="/productView/<%=product._id%>">
-                    <div class="d-flex justify-content-center">
-                    <img src="/adminImages/<%=product._id%>.jpg" alt="Image placeholder" class="img-fluid" style="width: 348px;height: 256px;">
-                    </div>
-                    </a>
+                  <figure class="block-4-image">
+                    <a href="/productView/<%=products._id%>"><img style="width:300px; height:225px"
+                        src="/adminImages/<%=products._id%>.jpg" alt="Image placeholder" class="img-fluid  rounded  p1"></a>
                   </figure>
                   <div class="block-4-text p-4">
-                    <h3><a href="/productView/<%=product._id%>"><%= product.name %></a></h3>
-                    <p class="mb-0"><%= product.description%></p>
-                    <p class="text-primary font-weight-bold"><%= product.price%></p>
+                    <h3><a href="/productView/<%=products._id%>"><%= products.name %></a></h3>
+                    <p class="mb-0"><%= products.description%></p>
+                    <p class="text-primary font-weight-bold"><%= products.price%></p>
                   </div>
                 </div>
               </div>
