--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -67,20 +67,21 @@
           <script>document.write(new Date().getFullYear());</script> All rights reserved | made <i class="icon-heart"
             aria-hidden="true"></i> by <a style="text-decoration:none;" href="https://colorlib.com" target="_blank"
             class="text-primary">@muhammadarshad8935@gmail.com</a>
+    
         </p>
       </div>
     </div>
   </div>
 </footer>
 </div>
-<script src="http://localhost:3000/js/jquery-3.3.1.min.js"></script>
-<script src="http://localhost:3000/js/jquery-ui.js"></script>
-<script src="http://localhost:3000/js/popper.min.js"></script>
-<script src="http://localhost:3000/js/bootstrap.min.js"></script>
-<script src="http://localhost:3000/js/owl.carousel.min.js"></script>
-<script src="http://localhost:3000/js/jquery.magnific-popup.min.js"></script>
-<script src="http://localhost:3000/js/aos.js"></script>
-<script src="http://localhost:3000/js/ajaxrequests.js"></script>
+<script src="/js/jquery-3.3.1.min.js"></script>
+<script src="/js/jquery-ui.js"></script>
+<script src="/js/popper.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/owl.carousel.min.js"></script>
+<script src="/js/jquery.magnific-popup.min.js"></script>
+<script src="/js/aos.js"></script>
+<script src="/js/ajaxrequests.js"></script>
 <script src="js/main.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
