--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -87,5 +87,47 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
-
+<script>
+  $("#placeOrder").submit((e) => { 
+    e.preventDefault();
+    $.ajax({
+      url: '/placeOrder',
+      method: 'post',
+      data: $('#placeOrder').serialize(),
+      success: (response) => {
+        if (response.couponDeleted) {
+          Swal.fire({
+            title: "coupon no longer exist!",
+            icon: "error",
+            confirmButtonText: "continue",
+          }).then(function () {
+            location.reload();
+          });
+        } else if (response.coupon) {
+          Swal.fire({
+            title: "Coupon already used!",
+            icon: "error",
+            confirmButtonText: "continue",
+          }).then(function () {
+            location.reload()
+          });
+        } else if (response.invalid) {
+          Swal.fire({
+            title: "Invalid Coupon",
+            icon: "error",
+            confirmButtonText: "continue",
+          }).then(function () {
+            location.reload();
+          });
+        } else if (response.success) {
+          location.href = "/orderSuccess"
+        } else if (response.url) {
+          window.location = response.url
+        } else {
+          location.href = "/viewCart";
+        }
+      }
+    })
+  }) 
+</script>
 </html>
