--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -106,8 +106,8 @@ background: linear-gradient(to top left, rgba(205, 156, 242, 1), rgba(246, 243, 
     </header>
 
   </div>
-  </div>
-  <% if (productData.length!==0) { %>
+  
+  <% if (productData.length>0) { %>
 
   <section class="h-100 gradient-custom">
     <div class="container py-5 h-100">
@@ -218,9 +218,7 @@ background: linear-gradient(to top left, rgba(205, 156, 242, 1), rgba(246, 243, 
         </span>
         <h2 class="d-block m-3">No Orders Yet</h2>
         <a href="/shop" class="btn btn-primary">Shop Now</a>
-      </div>
-   
-   
+      </div>  
     <% }  %>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -231,8 +229,4 @@ background: linear-gradient(to top left, rgba(205, 156, 242, 1), rgba(246, 243, 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
     integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
     crossorigin="anonymous"></script>
-  
-
-  <!-- end middle section -->
-  <!-- footer -->
   <%- include('../partials/footer')%>
